# theframe

./: .env.example  .gitignore  AGENTS.md  MODERNIZATION.md  Makefile  README.md  _types.py  bgtypes.py  dump.json  fetch.py  image_processor.py  main.py  process.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tools.py  tv_uploader.py  upload.py  upload.sh
data/: artworks.json  backgrounds.json  painters.json  paintings.json  populated.incremental.completed.json  populated.incremental.json  populated.incremental.pending.json  populated.json
json/: 0001-leonardo-da-vinci-mona-lisa.json  0002-vincent-van-gogh-starry-night.json  0003-edvard-munch-the-scream.json  0004-sandro-botticelli-the-birth-of-venus.json  0005-grant-wood-american-gothic.json  0006-pablo-picasso-three-musicians.json  0007-pablo-picasso-les-demoiselles-d-avignon.json  0008-michelangelo-buonarroti-the-creation-of-adam.json  0009-johannes-vermeer-girl-with-a-pearl-earring.json  0010-gustav-klimt-the-kiss.json  0011-salvador-dali-the-disintegration-of-the-persistence-of-memory.json  0012-diego-velazquez-las-meninas.json  0013-francisco-de-goya-the-third-of-may-1808.json  0014-claude-monet-water-lilies.json  0015-edouard-manet-olympia.json  0016-michelangelo-merisi-da-caravaggio-the-calling-of-saint-matthew.json  0017-jackson-pollock-number-1.json  0018-andy-warhol-marilyn-diptych.json  0019-georges-seurat-a-sunday-afternoon-on-the-island-of-la-grande-jatte.json  0020-hieronymus-bosch-the-garden-of-earthly-delights.json  0021-frida-kahlo-the-two-fridas.json  0022-jan-van-eyck-portrait-of-giovanni-arnolfini-and-his-wife.json  0023-peter-paul-rubens-the-descent-from-the-cross.json  0024-rembrandt-van-rijn-the-night-watch.json  0025-rene-magritte-the-transfixed-time.json  0026-eugene-delacroix-the-death-of-sardanapalus.json  0027-wassily-kandinsky-composition-viii.json  0028-caspar-david-friedrich-sea-of-ice.json  (+206 more)
(+13 files in other folders)
